[package]
name = "leapfrog"
version = "0.1.2"
edition = "2021"
authors = ["Rob Clucas <robjclucas@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "A fast, lock-free concurrent hash map"
repository = "https://github.com/robclu/leapfrog"

keywords = ["hashmap","concurrent", "map"]
categories = ["concurrency", "data-structures"]

[features]
default = []

[profile.release]
debug = true
lto = true

[dependencies]
atomic = "0.5.1"
serde = { version = "1.0.136", features = ["derive"] }

[dev-dependencies]
rand = "0.8.4"
core_affinity = "0.5.10"
criterion = "0.3.5"

[[bench]]
name = "hashmap"
harness = false

#[package.metadata.docs.rs]
#features = ["serde"]