[package]
name = "leapfrog"
version = "0.3.2"
edition = "2021"
authors = ["Rob Clucas <robjclucas@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "A fast, lock-free concurrent hash map"
repository = "https://github.com/robclu/leapfrog"

keywords = ["hashmap","concurrent", "map"]
categories = ["concurrency", "data-structures"]

[features]
default = []
serde = ["dep:serde_crate"]
stable_alloc = ["dep:allocator-api2"]

[profile.release]
debug = false
lto = true

[dependencies]
allocator-api2 = { version = "0.2.15", optional = true }
atomic = "0.5.3"
serde_crate = { package = "serde", version = "1.0.136", features = ["derive"], optional = true }

[dev-dependencies]
core_affinity = "0.8.1"
criterion = "0.5.1"
rand = "0.8.4"
serde_json = "1.0.50"

[[bench]]
name = "hashmap"
harness = false

[package.metadata.docs.rs]
features = ["serde", "stable_alloc"]
